--- a/pages/envios.html
+++ b/pages/envios.html
@@ -4,35 +4,35 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>DesafioBootstrap</title>
-    <link rel="shortcut icon" href="./images/logo1.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/logo1.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/ef623b35b6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
     <header>
         <nav class="navbar navbar-expand-lg color-nav">
             <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html"><img class="logo" src="./images/logo2.png" alt="logo"></a>
+              <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/logo2.png" alt="logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./pages/productos.html">Productos</a>
+                    <a class="nav-link active" aria-current="page" href="../pages/productos.html">Productos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./pages/envios.html">Envios</a>
+                    <a class="nav-link active" aria-current="page" href="../pages/envios.html">Envios</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./pages/sobre-nosotros.html">Sobre nosotros</a>
+                    <a class="nav-link active" aria-current="page" href="../pages/sobre-nosotros.html">Sobre nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./pages/preguntas-frecuentes.html">Preguntas frecuentes</a>
+                    <a class="nav-link active" aria-current="page" href="../pages/preguntas-frecuentes.html">Preguntas frecuentes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./pages/contacto.html">Contactanos</a>
+                    <a class="nav-link active" aria-current="page" href="../pages/contacto.html">Contactanos</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -43,7 +43,7 @@
             </div>
           </nav>
     </header>
-    <h1>Desafio bootstrap!</h1>
+    <h1>Envios</h1>
     <div class="container">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus perspiciatis obcaecati dolores, veniam neque aliquam, recusandae quidem earum, eaque nisi dignissimos deserunt? Vitae quasi fugiat amet. Reiciendis autem iusto velit?</div>
     <div class="container">Lorem ipsum dolor sit amet consectetur.</div>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
@@ -72,7 +72,11 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <h3>Lorem ipsum dolor sit amet.</h3>
+    <div class="row">
+      <h4>A donde estamos:</h4>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d210147.3960475148!2d-58.57303717346564!3d-34.61546152235647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses!2sar!4v1661378538250!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <h3>Envios a todo el país:</h3>
     <div class="container">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus perspiciatis obcaecati dolores, veniam neque aliquam, recusandae quidem earum, eaque nisi dignissimos deserunt? Vitae quasi fugiat amet. Reiciendis autem iusto velit?</div>
     <div class="container">Lorem ipsum dolor sit amet consectetur.</div>
             <!-- Footer -->
