--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -4,35 +4,35 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>DesafioBootstrap</title>
-    <link rel="shortcut icon" href="./images/logo1.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/logo1.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/ef623b35b6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
     <header>
         <nav class="navbar navbar-expand-lg color-nav">
             <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html"><img class="logo" src="./images/logo2.png" alt="logo"></a>
+              <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/logo2.png" alt="logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./pages/productos.html">Productos</a>
+                    <a class="nav-link active" aria-current="page" href="../pages/productos.html">Productos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./pages/envios.html">Envios</a>
+                    <a class="nav-link active" aria-current="page" href="../pages/envios.html">Envios</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./pages/sobre-nosotros.html">Sobre nosotros</a>
+                    <a class="nav-link active" aria-current="page" href="../pages/sobre-nosotros.html">Sobre nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./pages/preguntas-frecuentes.html">Preguntas frecuentes</a>
+                    <a class="nav-link active" aria-current="page" href="../pages/preguntas-frecuentes.html">Preguntas frecuentes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./pages/contacto.html">Contactanos</a>
+                    <a class="nav-link active" aria-current="page" href="../pages/contacto.html">Contactanos</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -43,7 +43,7 @@
             </div>
           </nav>
     </header>
-    <h1>Desafio bootstrap!</h1>
+    <h1>Sobre nosotros</h1>
     <div class="container">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus perspiciatis obcaecati dolores, veniam neque aliquam, recusandae quidem earum, eaque nisi dignissimos deserunt? Vitae quasi fugiat amet. Reiciendis autem iusto velit?</div>
     <div class="container">Lorem ipsum dolor sit amet consectetur.</div>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
@@ -72,8 +72,12 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <h3>Lorem ipsum dolor sit amet.</h3>
+    <h4>¿Quienes somos?</h4>
     <div class="container">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus perspiciatis obcaecati dolores, veniam neque aliquam, recusandae quidem earum, eaque nisi dignissimos deserunt? Vitae quasi fugiat amet. Reiciendis autem iusto velit?</div>
+    <h4>Nuestros objetivos:</h4>
+    <div class="container">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus perspiciatis obcaecati dolores, veniam neque aliquam, recusandae quidem earum, eaque nisi dignissimos deserunt? Vitae quasi fugiat amet. Reiciendis autem iusto velit?</div>
+    <div class="container">Lorem ipsum dolor sit amet consectetur.</div>
+    <h4>Horarios de atencion en nuestro local:</h4>
     <div class="container">Lorem ipsum dolor sit amet consectetur.</div>
             <!-- Footer -->
     <footer class="bg-dark text-center text-white">
